--- a/app/views/births/multipleBirths2/02-child2-correct.html
+++ b/app/views/births/multipleBirths2/02-child2-correct.html
@@ -94,7 +94,7 @@ href: "javascript:window.history.back()"
     }) }}
 
     <div class="govuk-form-group">
-      <p class="govuk-body"><a href="02-search.html" class="govuk-link">Return to search</a></p>
+      <p class="govuk-body"><a href="" class="govuk-link">No, return to homepage</a></p>
     </div>
   </div>
 </div>
