--- a/app/views/births/multipleBirths2/additionalInfoChild2/commentsChild2.html
+++ b/app/views/births/multipleBirths2/additionalInfoChild2/commentsChild2.html
@@ -30,7 +30,7 @@ href: "javascript:window.history.back()"
             Comments will not be entered in the register
           </div>
           <textarea rows="5" id="comments" name="comments"
-          class="govuk-textarea govuk-!-margin-bottom-1"></textarea></div>
+          class="govuk-textarea govuk-!-margin-bottom-1">Interpreter - John Smith, 07846758450, j.smith@outlook.com.</textarea></div>
       <section aria-live="polite"
         class="govuk-body govuk-character-count__message govuk-!-margin-bottom-4 govuk-character-count__status"><span
           class="govuk-hint">You have 500 characters remaining</span></section>
