--- a/app/views/births/multipleBirths2/childsDetails/01-name-date.html
+++ b/app/views/births/multipleBirths2/childsDetails/01-name-date.html
@@ -22,7 +22,7 @@ href: "javascript:window.history.back()"
           Sex, date of birth and name
         </h1>
 
-        <form class="form" action="/births/v1/name-date-form" method="post">
+        <form class="form" action="name-date-check" method="post">
 
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
@@ -224,8 +224,7 @@ href: "javascript:window.history.back()"
 
           <div class="govuk-button-group">
             {{ govukButton({
-            text: "Save and return",
-            href: "javascript:window.history.back()"
+            text: "Save and return"
             }) }}
           </div>
 
