--- a/app/views/births/multipleBirths2/stats/voluntary.html
+++ b/app/views/births/multipleBirths2/stats/voluntary.html
@@ -212,8 +212,7 @@ href: "javascript:window.history.back()"
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return",
-        href: "/births/multipleBirths2/tasks/index.html"
+        text: "Save and return"
         }) }}
       </div>
 
