--- a/app/views/births/multipleBirths2/submit/sign-page.html
+++ b/app/views/births/multipleBirths2/submit/sign-page.html
@@ -16,10 +16,11 @@
     <div class="govuk-grid-column-two-thirds-from-desktop">
 <span class="govuk-caption-l">Submit the registration</span>
       <h1 class="govuk-heading-xl">
-        Declarations
+        Registrar's declaration
       </h1>
 
-  <div class="govuk-grid-row govuk-grid-column-full">
+ <!--
+      <div class="govuk-grid-row govuk-grid-column-full">
     {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
 {{ govukCheckboxes({
@@ -40,6 +41,7 @@
   ]
 }) }}
   </div>
+-->
 
     <div class="govuk-grid-row govuk-grid-column-full">
     {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
