--- a/app/views/births/multipleBirths2/submitChild2/sign-page-child2.html
+++ b/app/views/births/multipleBirths2/submitChild2/sign-page-child2.html
@@ -16,7 +16,7 @@ href: "javascript:window.history.back()"
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <span class="govuk-caption-l">Submit the registration</span>
     <h1 class="govuk-heading-xl">
-      Declarations
+      Registrar's declarations
     </h1>
 
 
@@ -24,7 +24,8 @@ href: "javascript:window.history.back()"
 
 
 
-    <div class="govuk-grid-row govuk-grid-column-full">
+    <!-- 
+      <div class="govuk-grid-row govuk-grid-column-full">
       {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
       {{ govukCheckboxes({
@@ -46,6 +47,7 @@ href: "javascript:window.history.back()"
       ]
       }) }}
     </div>
+  -->
 
     <div class="govuk-grid-row govuk-grid-column-full">
       {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
