--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,13 +20,13 @@
     </p>
      
      <p class="govuk-body">
-      <a href="/births/multipleBirths/00-sign-in.html">Round 1</a> – Registering twins with same informant
+      <a href="/births/multipleBirths/00-sign-in.html">Round 1</a> – Week beginning 13th October
     </p>
     
     <p class="govuk-body">
-      <a href="/births/multipleBirths2/00-sign-in.html">Round 2</a> – Registering twins with same informant
+      <a href="/births/multipleBirths2/00-sign-in.html">Round 2</a> – Week beginning 3rd November
     </p>
-     <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Kaisa or Helen</p>
+     <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Kaisa, Helen or Wiktoria</p>
    </div>
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
        <div class="govuk-!-margin-top-2 govuk-!-margin-bottom-6">
