--- a/app/views/births/multipleBirths2/parentsDetails/fathers-name.html
+++ b/app/views/births/multipleBirths2/parentsDetails/fathers-name.html
@@ -204,8 +204,7 @@ href: "javascript:window.history.back()"
 
       <div class="govuk-button-group">
         {{ govukButton({
-        text: "Save and return",
-        href: "/births/multipleBirths2/tasks/index.html"
+        text: "Save and return"
         }) }}
       </div>
 
