--- a/app/views/births/multipleBirths2/stats/confidential.html
+++ b/app/views/births/multipleBirths2/stats/confidential.html
@@ -403,7 +403,7 @@ href: "javascript:window.history.back()"
                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                 id="conditional-liveBirthsMother-yes">
              <div class="govuk-form-group">
-               <h3 class="govuk-heading-s">How many?</h3>
+               <h3 class="govuk-heading-s">How many children?</h3>
                <div style="display: flex; gap: 10px;">
                  <div>
                    <label class="govuk-label" for="numberOfChildrenBornAlive">
