--- a/app/views/births/multipleBirths2/submitChild2/check-answers-page-child2.html
+++ b/app/views/births/multipleBirths2/submitChild2/check-answers-page-child2.html
@@ -260,7 +260,23 @@ href: "javascript:window.history.back()"
     </p>
   -->
     
-    
+  {{ govukCheckboxes({
+    name: "waste",
+    fieldset: {
+      legend: {
+        text: " ",
+        isPageHeading: false,
+        classes: "govuk-body"
+      }
+    },
+  
+    items: [
+      {
+        value: "farm",
+        text: "Informant has confirmed that the particulars given by them are true to the best of their knowledge and belief."
+      }
+    ]
+  }) }}
 
 
     <form action="sign-page-child2" method="post" novalidate>
