--- a/app/views/births/multipleBirths2/tasks/index.html
+++ b/app/views/births/multipleBirths2/tasks/index.html
@@ -35,7 +35,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.deceasedFirstName %}
+          {% if data.nameDateCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
