--- a/app/views/births/multipleBirths2/triage/02-evidence.html
+++ b/app/views/births/multipleBirths2/triage/02-evidence.html
@@ -20,6 +20,58 @@ href: "javascript:window.history.back()"
 
       <span class="govuk-caption-l">Add record details</span>
 
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <h1 class="govuk-fieldset__heading">
+              Has registrar seen evidence of informant's identity?
+            </h1>
+          </legend>
+          <br>
+          
+
+          <details class="govuk-details">
+            <summary class="govuk-details__summary">
+              <span class="govuk-details__summary-text">
+                Help with ID requirements
+              </span>
+            </summary>
+            <div class="govuk-details__text">
+              The informant must prove their identity before they can register a birth. For details of acceptable ID documents, see the 
+              <a href="" class="govuk-link">Births Handbook</a>.
+            </div>
+          </details>
+          
+
+          <br>
+          <div class="govuk-radios" data-module="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                Yes
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                No
+              </label>
+            </div>
+          </div>
+        </fieldset>
+      </div>
+
+      {% from "govuk/components/button/macro.njk" import govukButton %}
+
+      {{ govukButton({
+        text: "Continue",
+        href: "/births/multipleBirths2/triage/03-marital-status.html"
+      }) }}
+
+
+      
+
+     <!--
       {{ govukRadios({
       name: "evidence",
       fieldset: {
@@ -43,6 +95,7 @@ href: "javascript:window.history.back()"
       {{ govukButton({
       text: "Continue"
       }) }}
+    -->
 
     </form>
 
