Changes after session 1

--- a/app/views/births/multipleBirths2/parentsDetailsChild2/fathers-details-child2.html
+++ b/app/views/births/multipleBirths2/parentsDetailsChild2/fathers-details-child2.html
@@ -101,14 +101,14 @@ href: "javascript:window.history.back()"
           <div class="govuk-radios govuk-radios">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="SpanishNational-true" name="SpanishNational" type="radio"
-                value="true" checked {{ checked("SpanishNational", "true" ) }}>
+                value="true" {{ checked("SpanishNational", "true" ) }}>
               <label class="govuk-label govuk-radios__label" id="SpanishNational-true-label" for="SpanishNational-true">
                 Yes
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="SpanishNational-false" name="SpanishNational" type="radio"
-                value="false" {{ checked("SpanishNational", "false" ) }}>
+                value="false" checked {{ checked("SpanishNational", "false" ) }}>
               <label class="govuk-label govuk-radios__label" id="SpanishNational-false-label"
                 for="SpanishNational-false">
                 No
