--- a/app/views/births/multipleBirths2/stats/voluntary.html
+++ b/app/views/births/multipleBirths2/stats/voluntary.html
@@ -54,7 +54,7 @@ href: "javascript:window.history.back()"
                 data['employment-mother']=='employee-not-supervising' %}checked{% endif %}
                 data-aria-controls="conditional-industry">
               <label class="govuk-label govuk-radios__label" for="employment-status-employee-not-supervising">
-                Employee, not supervising
+                Employed, not supervising
               </label>
             </div>
 
@@ -73,7 +73,7 @@ href: "javascript:window.history.back()"
                 type="radio" value="employee-supervising" {% if data['employment-mother']=='employee-supervising'
                 %}checked{% endif %}>
               <label class="govuk-label govuk-radios__label" for="employment-status-employee-supervising">
-                Employee, supervising
+                Employed, supervising
               </label>
             </div>
 
@@ -140,7 +140,7 @@ href: "javascript:window.history.back()"
                 data['employment-father']=='employee-not-supervising' %}checked{% endif %}
                 data-aria-controls="conditional-industry-father">
               <label class="govuk-label govuk-radios__label" for="employment-status-employee-not-supervising-father">
-                Employee, not supervising
+                Employed, not supervising
               </label>
             </div>
 
@@ -159,7 +159,7 @@ href: "javascript:window.history.back()"
                 name="employment-father" type="radio" value="employee-supervising" {% if
                 data['employment-father']=='employee-supervising' %}checked{% endif %}>
               <label class="govuk-label govuk-radios__label" for="employment-status-employee-supervising-father">
-                Employee, supervising
+                Employed, supervising
               </label>
             </div>
 
