--- a/app/views/births/multipleBirths2/statsChild2/voluntaryChild2.html
+++ b/app/views/births/multipleBirths2/statsChild2/voluntaryChild2.html
@@ -52,7 +52,7 @@ href: "javascript:window.history.back()"
                 name="employment-mother" type="radio" value="employee-not-supervising" checked
                 data-aria-controls="conditional-industry">
               <label class="govuk-label govuk-radios__label" for="employment-status-employee-not-supervising">
-                Employee, not supervising
+                Employed, not supervising
               </label>
             </div>
 
@@ -70,7 +70,7 @@ href: "javascript:window.history.back()"
               <input class="govuk-radios__input" id="employment-status-employee-supervising" name="employment-mother"
                 type="radio" value="employee-supervising">
               <label class="govuk-label govuk-radios__label" for="employment-status-employee-supervising">
-                Employee, supervising
+                Employed, supervising
               </label>
             </div>
 
@@ -134,7 +134,7 @@ href: "javascript:window.history.back()"
                 name="employment-father" type="radio" value="employee-not-supervising"
                 data-aria-controls="conditional-industry-father" checked>
               <label class="govuk-label govuk-radios__label" for="employment-status-employee-not-supervising-father">
-                Employee, not supervising
+                Employed, not supervising
               </label>
             </div>
 
@@ -152,7 +152,7 @@ href: "javascript:window.history.back()"
               <input class="govuk-radios__input" id="employment-status-employee-supervising-father"
                 name="employment-father" type="radio" value="employee-supervising">
               <label class="govuk-label govuk-radios__label" for="employment-status-employee-supervising-father">
-                Employee, supervising
+                Employed, supervising
               </label>
             </div>
 
