--- a/app/views/births/multipleBirths2/submitChild2/confirmation-page-child2.html
+++ b/app/views/births/multipleBirths2/submitChild2/confirmation-page-child2.html
@@ -31,7 +31,7 @@
 
 
       <p class="govuk-body">
-        You can now print the birth certificate.
+        You can now print the birth certificates.
       </p>
         <br>
         <label class="govuk-label govuk-label--s" for="example-2">
