--- a/app/views/births/multipleBirths2/child2Details/01-child2-name-date.html
+++ b/app/views/births/multipleBirths2/child2Details/01-child2-name-date.html
@@ -38,7 +38,7 @@ href: "javascript:window.history.back()"
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
           <div class="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" value="Female" {{
+              <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" checked value="Female" {{
                 checked("sex", "Female" ) }} {% if not data.sex %} {% endif %}>
               <label class="govuk-label govuk-radios__label" for="sex-1">Female</label>
             </div>
