--- a/app/views/births/multipleBirths2/submit/check-answers-page.html
+++ b/app/views/births/multipleBirths2/submit/check-answers-page.html
@@ -51,7 +51,7 @@ href: "javascript:window.history.back()"
           Name
         </dt>
         <dd class="govuk-summary-list__value">
-          Oliver MARTINEZ LARA
+          Oliver PEREZ MARTINEZ
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> customer reference</span></a>
