--- a/app/views/births/multipleBirths2/child2Details/01-child2-name-date.html
+++ b/app/views/births/multipleBirths2/child2Details/01-child2-name-date.html
@@ -38,19 +38,19 @@ href: "javascript:window.history.back()"
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
           <div class="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="sex-1" name="sex" type="radio" value="Female" {{
-                checked("sex", "Female" ) }} {% if not data.sex %} {% endif %}>
-              <label class="govuk-label govuk-radios__label" for="sex-1">Female</label>
+              <input class="govuk-radios__input" id="child2-sex-1" name="child2-sex" type="radio" value="Female" {{
+                checked("child2-sex", "Female" ) }}>
+              <label class="govuk-label govuk-radios__label" for="child2-sex-1">Female</label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="sex-2" name="sex" type="radio" value="Male" {{
-                checked("sex", "Male" ) }}>
-              <label class="govuk-label govuk-radios__label" for="sex-2">Male</label>
+              <input class="govuk-radios__input" id="child2-sex-2" name="child2-sex" type="radio" value="Male" {{
+                checked("child2-sex", "Male" ) }}>
+              <label class="govuk-label govuk-radios__label" for="child2-sex-2">Male</label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="sex-3" name="sex" type="radio" value="Indeterminate" {{
-                checked("sex", "Indeterminate" ) }}>
-              <label class="govuk-label govuk-radios__label" for="sex-3">Indeterminate</label>
+              <input class="govuk-radios__input" id="child2-sex-3" name="child2-sex" type="radio" value="Indeterminate"
+                {{ checked("child2-sex", "Indeterminate" ) }}>
+              <label class="govuk-label govuk-radios__label" for="child2-sex-3">Indeterminate</label>
             </div>
           </div>
         </fieldset>
@@ -64,55 +64,66 @@ href: "javascript:window.history.back()"
           <div id="dob-hint" class="govuk-hint">
             For example, 23 11 2024
           </div>
-      
+
           <!-- Date row -->
-          <div class="govuk-date-input govuk-!-margin-bottom-3" id="dob-date">
+          <div class="govuk-date-input govuk-!-margin-bottom-3" id="child2-dob-date">
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-day">Day</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-day" name="dob-day" type="text" inputmode="numeric" value="1">
+                <label class="govuk-label govuk-date-input__label" for="child2-dob-day">Day</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="child2-dob-day"
+                  name="child2-dob-day" type="text" inputmode="numeric" value="{{ data['child2-dob-day'] or '1' }}">
               </div>
             </div>
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-month">Month</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-month" name="dob-month" type="text" inputmode="numeric" value="10">
+                <label class="govuk-label govuk-date-input__label" for="child2-dob-month">Month</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="child2-dob-month"
+                  name="child2-dob-month" type="text" inputmode="numeric"
+                  value="{{ data['child2-dob-month'] or '10' }}">
               </div>
             </div>
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-year">Year</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="dob-year" name="dob-year" type="text" inputmode="numeric" value="2025">
+                <label class="govuk-label govuk-date-input__label" for="child2-dob-year">Year</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="child2-dob-year"
+                  name="child2-dob-year" type="text" inputmode="numeric"
+                  value="{{ data['child2-dob-year'] or '2025' }}">
               </div>
             </div>
           </div>
-      
+
           <!-- Time row -->
-          <div class="govuk-date-input" id="dob-time">
+          <div class="govuk-date-input" id="child2-dob-time">
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-hour">Hours</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-hour" name="dob-hour" type="text" inputmode="numeric" value="12">
+                <label class="govuk-label govuk-date-input__label" for="child2-dob-hour">Hours</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="child2-dob-hour"
+                  name="child2-dob-hour" type="text" inputmode="numeric" value="{{ data['child2-dob-hour'] or '12' }}">
               </div>
             </div>
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-minute">Minutes</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-minute" name="dob-minute" type="text" inputmode="numeric" value="02">
+                <label class="govuk-label govuk-date-input__label" for="child2-dob-minute">Minutes</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="child2-dob-minute"
+                  name="child2-dob-minute" type="text" inputmode="numeric"
+                  value="{{ data['child2-dob-minute'] or '02' }}">
               </div>
             </div>
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-second">Seconds</label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-second" name="dob-second" type="text" inputmode="numeric" value="02">
+                <label class="govuk-label govuk-date-input__label" for="child2-dob-second">Seconds</label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="child2-dob-second"
+                  name="child2-dob-second" type="text" inputmode="numeric"
+                  value="{{ data['child2-dob-second'] or '02' }}">
               </div>
             </div>
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="dob-period">am / pm</label>
-                <select class="govuk-select govuk-input--width-2" id="dob-period" name="dob-period">
-                  <option value="PM">pm</option>
-                  <option value="AM">am</option>
+                <label class="govuk-label govuk-date-input__label" for="child2-dob-period">am / pm</label>
+                <select class="govuk-select govuk-input--width-2 time-select" id="child2-dob-period" name="child2-dob-period">
+                  <option value="PM" {% if data['child2-dob-period']=='PM' or not data['child2-dob-period'] %}selected{%
+                    endif %}>pm</option>
+                  <option value="AM" {% if data['child2-dob-period']=='AM' %}selected{% endif %}>am</option>
                 </select>
               </div>
             </div>
@@ -123,21 +134,21 @@ href: "javascript:window.history.back()"
 
       <div id="yes-name-block">
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="deceased-first-name">First name</label>
-          <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="deceasedFirstName"
-            type="text" value="{{data['child2-deceasedFirstName']}}">
+          <label class="govuk-label govuk-label--s" for="child2-deceased-first-name">First name</label>
+          <input class="govuk-input govuk-!-width-one-half" id="child2-deceased-first-name"
+            name="child2-deceasedFirstName" type="text" value="{{data['child2-deceasedFirstName']}}">
         </div>
 
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
-          <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="deceasedMiddleName"
-            type="text" value="{{data['child2-deceasedMiddleName']}}">
+          <label class="govuk-label govuk-label--s" for="child2-deceased-middle-name">Middle names</label>
+          <input class="govuk-input govuk-!-width-one-half" id="child2-deceased-middle-name"
+            name="child2-deceasedMiddleName" type="text" value="{{data['child2-deceasedMiddleName']}}">
         </div>
 
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
-          <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="deceasedLastName" type="text"
-            value="{{data['child2-deceasedLastName']}}">
+          <label class="govuk-label govuk-label--s" for="child2-deceased-last-name">Last name</label>
+          <input class="govuk-input govuk-!-width-one-half" id="child2-deceased-last-name"
+            name="child2-deceasedLastName" type="text" value="{{data['child2-deceasedLastName']}}">
         </div>
 
         <div class="govuk-form-group">
@@ -149,13 +160,15 @@ href: "javascript:window.history.back()"
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked value="england">
+                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" checked
+                  value="england">
                 <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio"
+                  value="scotland">
                 <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
                   No - print as typed
                 </label>
@@ -164,74 +177,66 @@ href: "javascript:window.history.back()"
           </fieldset>
         </div>
 
-      <div>
-        <p class="govuk-body">
-        <a href="#" class="govuk-link">Add prefix or suffix</a>
-      </p>
+        <div>
+          <p class="govuk-body">
+            <a href="#" class="govuk-link">Add prefix or suffix</a>
+          </p>
 
-      </div><br>
+        </div><br>
 
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
+          <fieldset class="govuk-fieldset" aria-describedby="child2-name-order-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               Print order of names
             </legend>
             <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="name-order" name="name-order" type="radio" checked="checked"
-                  value="name-order-first-name" {{ checked("name-order", "name-order-first-name" ) }}
-                  data-aria-controls="">
-                <label class="govuk-label govuk-radios__label" for="name-order">
+                <input class="govuk-radios__input" id="child2-name-order" name="child2-name-order" type="radio"
+                  checked="checked" value="name-order-first-name" {{
+                  checked("child2-name-order", "name-order-first-name" ) }} data-aria-controls="">
+                <label class="govuk-label govuk-radios__label" for="child2-name-order">
                   Last name last
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="name-order-1" name="name-order" type="radio"
-                  value="name-order-last-name" {{ checked("name-order", "name-order-last-name" ) }}
+                <input class="govuk-radios__input" id="child2-name-order-1" name="child2-name-order" type="radio"
+                  value="name-order-last-name" {{ checked("child2-name-order", "name-order-last-name" ) }}
                   data-aria-controls="">
-                <label class="govuk-label govuk-radios__label" for="name-order-1">
+                <label class="govuk-label govuk-radios__label" for="child2-name-order-1">
                   Last name first
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="name-order-2" name="name-order" type="radio"
-                  value="name-order-only-last" {{ checked('name-order', 'name-order-only-last' ) }}
+                <input class="govuk-radios__input" id="child2-name-order-2" name="child2-name-order" type="radio"
+                  value="name-order-only-last" {{ checked('child2-name-order', 'name-order-only-last' ) }}
                   data-aria-controls="">
-                <label class="govuk-label govuk-radios__label" for="name-order-2">
+                <label class="govuk-label govuk-radios__label" for="child2-name-order-2">
                   Last name only
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="name-order-4" name="name-order" type="radio"
-                  value="name-order-other" {{ checked("name-order", "name-order-other" ) }}
-                  data-aria-controls="conditional-name-order-other">
-                <label class="govuk-label govuk-radios__label" for="name-order-4">
+                <input class="govuk-radios__input" id="child2-name-order-4" name="child2-name-order" type="radio"
+                  value="name-order-other" {{ checked("child2-name-order", "name-order-other" ) }}
+                  data-aria-controls="conditional-child2-name-order-other">
+                <label class="govuk-label govuk-radios__label" for="child2-name-order-4">
                   Other
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
-                id="conditional-name-order-other">
+                id="conditional-child2-name-order-other">
                 <div class="govuk-form-group">
-                  <label class="govuk-label govuk-label" id="custom-order" for="custom-order">
+                  <label class="govuk-label govuk-label" for="child2-custom-order">
                     Order of names
                   </label>
-                  <input class="govuk-input govuk-!-width-one-half" id="custom-order" name="custom-order" type="text"
-                    aria-required="false" value="{{data['custom-order']}}">
+                  <input class="govuk-input govuk-!-width-one-half" id="child2-custom-order" name="child2-custom-order"
+                    type="text" aria-required="false" value="{{data['child2-custom-order']}}">
                 </div>
               </div>
             </div>
           </fieldset>
         </div>
-
       </div>
-
-
-      
-
-          
-      
-
       <div class="govuk-button-group">
         {{ govukButton({
         text: "Save and return"
@@ -241,10 +246,6 @@ href: "javascript:window.history.back()"
     </form>
   </div>
 </div>
-
-
-
-
 
 <!-- Load the JS from views/latest/ -->
 
