--- a/app/views/births/multipleBirths2/parentsDetails/fathers-details.html
+++ b/app/views/births/multipleBirths2/parentsDetails/fathers-details.html
@@ -103,14 +103,14 @@ href: "javascript:window.history.back()"
           <div class="govuk-radios govuk-radios">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="SpanishNational-true" name="SpanishNational" type="radio"
-                value="true" {{ checked("SpanishNational", "true" ) }}>
+                value="Yes" {{ checked("SpanishNational", "Yes" ) }}>
               <label class="govuk-label govuk-radios__label" id="SpanishNational-true-label" for="SpanishNational-true">
                 Yes
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="SpanishNational-false" name="SpanishNational" type="radio"
-                value="false" {{ checked("SpanishNational", "false" ) }}>
+                value="No" {{ checked("SpanishNational", "No" ) }}>
               <label class="govuk-label govuk-radios__label" id="SpanishNational-false-label"
                 for="SpanishNational-false">
                 No
