--- a/app/views/births/multipleBirths2/submitChild2/register-page-child2.html
+++ b/app/views/births/multipleBirths2/submitChild2/register-page-child2.html
@@ -32,7 +32,7 @@ href: "javascript:window.history.back()"
         <label class="govuk-label govuk-label--s" for="registrar-name">
           Registrar's full name
         </label>
-        <input class="govuk-input govuk-!-width-one-half" value="Example name" id="registrar-name" name="registrarName"
+        <input class="govuk-input govuk-!-width-one-half" id="registrar-name" name="registrarName"
           type="text" value="{{ data['registrarName'] }}">
       </div>
 
