--- a/app/views/births/multipleBirths2/additionalInfo/comments.html
+++ b/app/views/births/multipleBirths2/additionalInfo/comments.html
@@ -13,43 +13,31 @@ href: "javascript:window.history.back()"
 
 {% block content %}
 
-
-
-<form class="form" action="/latest/informant/comments-form" method="post">
-
-
-
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <span class="govuk-caption-l">Additional information</span>
-    <h1 class="govuk-heading-l">Registrar's comments</h1>
-    <form autocomplete="off" novalidate="">
-      <div class="govuk-form-group govuk-!-margin-bottom-1" data-testid="comments"><label class="govuk-fieldset__legend govuk-fieldset__legend--s"
-          for="comments">Add comments</label>
-          <div id="authentication-code-hint" class="govuk-hint">
-            Comments will not be entered in the register
-          </div>
-          <textarea rows="5" id="comments" name="comments"
-          class="govuk-textarea govuk-!-margin-bottom-1"></textarea></div>
+<form class="form" action="comments-check" method="post">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-l">Additional information</span>
+      <h1 class="govuk-heading-l">Registrar's comments</h1>
+      <div class="govuk-form-group govuk-!-margin-bottom-1" data-testid="comments">
+        <label class="govuk-fieldset__legend govuk-fieldset__legend--s" for="comments">Add comments</label>
+        <div id="authentication-code-hint" class="govuk-hint">
+          Comments will not be entered in the register
+        </div>
+        <textarea rows="5" id="comments" name="comments"
+          class="govuk-textarea govuk-!-margin-bottom-1">{{ data['comments'] or '' }}</textarea>
+      </div>
       <section aria-live="polite"
-        class="govuk-body govuk-character-count__message govuk-!-margin-bottom-4 govuk-character-count__status"><span
-          class="govuk-hint">You have 500 characters remaining</span></section>
-          
-          <div class="govuk-button-group">
-            {{ govukButton({
-              text: "Save and return",
-              href: "javascript:window.history.back()"
-            })
-          }} 
-          </div>
-
-
-    </form>
-
-</div>
-
+        class="govuk-body govuk-character-count__message govuk-!-margin-bottom-4 govuk-character-count__status">
+        <span class="govuk-hint">You have 500 characters remaining</span>
+      </section>
+      <div class="govuk-button-group">
+        {{ govukButton({
+        text: "Save and return"
+        })
+        }}
+      </div>
+    </div>
+  </div>
 </form>
-
-
 
 {% endblock %}
