--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,7 @@
 
     <p>
       <h3 class="govuk-heading-s" style="display: inline;">Multiple births</h3>
-      <strong class="govuk-tag govuk-tag--pink">In research</strong>
+      <strong class="govuk-tag govuk-tag--yellow">In progress</strong>
     </p>
      
      <p class="govuk-body">
@@ -26,6 +26,11 @@
     <p class="govuk-body">
       <a href="/births/multipleBirths2/00-sign-in.html">Round 2</a> – Week beginning 3rd November
     </p>
+
+    <p class="govuk-body">
+      <a href="/births/multipleBirths3/00-sign-in.html">Round 3</a> – Week beginning 1st December
+    </p>
+
      <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Kaisa, Helen or Wiktoria</p>
    </div>
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
