--- a/app/views/births/multipleBirths3/01-search.html
+++ b/app/views/births/multipleBirths3/01-search.html
@@ -26,7 +26,7 @@
             Child's NHS number
         </label>
         <div id="event-name-hint" class="govuk-hint">
-        It’s a 10-digit number, for example 987 654 3210
+        It&rsquo;s a 10-digit number, for example 987 654 3210
         </div>
         <input class="govuk-input govuk-!-width-one-half" id="email" name="email" type="text" autocomplete="email">
       </div>
