added countries dropdown and text input for other selectiom

--- a/app/views/births/multipleBirths3/02-child-correct.html
+++ b/app/views/births/multipleBirths3/02-child-correct.html
@@ -209,7 +209,7 @@ href: "javascript:window.history.back()"
 </div>
 
 <script>
-document.addEventListener('DOMContentLoaded', function() {
+document.addEventListener('DOMContentLoaded', () => {
   const child1Checkbox = document.querySelector('input[name="do-not-register-child-1"]');
   const child2Checkbox = document.querySelector('input[name="do-not-register-child-2"]');
   const radioContainer = document.getElementById('which-child');
